// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/channel/ChannelProfile should match snapshot 1`] = `
<AdminPanel
  id="channel_profile"
  subtitle={
    Object {
      "defaultMessage": "Summary of the channel, including the channel name.",
      "id": "admin.channel_settings.channel_detail.profileDescription",
    }
  }
  title={
    Object {
      "defaultMessage": "Channel Profile",
      "id": "admin.channel_settings.channel_detail.profileTitle",
    }
  }
>
  <div
    className="group-teams-and-channels AdminChannelDetails"
  >
    <div
      className="group-teams-and-channels--body channel-desc-col"
    >
      <div
        className="channel-name"
      >
        <b>
          <MemoizedFormattedMessage
            defaultMessage="Name"
            id="admin.channelSettings.channelDetail.channelName"
          />
        </b>
        <br />
        test
      </div>
      <div
        className="channel-team"
      >
        <b>
          <MemoizedFormattedMessage
            defaultMessage="Team"
            id="admin.channelSettings.channelDetail.channelTeam"
          />
        </b>
        <br />
        test
      </div>
      <div
        className="AdminChannelDetails_archiveContainer"
      >
        <button
          className="btn btn-secondary btn-danger"
          type="button"
        >
          <i
            className="icon icon-archive-outline"
          />
          <MemoizedFormattedMessage
            defaultMessage="Archive Channel"
            id="admin.channel_settings.channel_details.archiveChannel"
          />
        </button>
      </div>
    </div>
  </div>
</AdminPanel>
`;

exports[`admin_console/team_channel_settings/channel/ChannelProfile should match snapshot for a shared channel 1`] = `
<AdminPanel
  id="channel_profile"
  subtitle={
    Object {
      "defaultMessage": "Summary of the channel, including the channel name.",
      "id": "admin.channel_settings.channel_detail.profileDescription",
    }
  }
  title={
    Object {
      "defaultMessage": "Channel Profile",
      "id": "admin.channel_settings.channel_detail.profileTitle",
    }
  }
>
  <div
    className="group-teams-and-channels AdminChannelDetails"
  >
    <div
      className="group-teams-and-channels--body channel-desc-col"
    >
      <div
        className="channel-name"
      >
        <b>
          <MemoizedFormattedMessage
            defaultMessage="Name"
            id="admin.channelSettings.channelDetail.channelName"
          />
        </b>
        <br />
        test
      </div>
      <div
        className="channel-team"
      >
        <b>
          <MemoizedFormattedMessage
            defaultMessage="Team"
            id="admin.channelSettings.channelDetail.channelTeam"
          />
        </b>
        <br />
        test
      </div>
      <div
        className="channel-organizations"
      >
        <b>
          <MemoizedFormattedMessage
            defaultMessage="Organizations"
            id="admin.channelSettings.channelDetail.channel_organizations"
          />
        </b>
        <br />
        <SharedChannelIndicator
          className="shared-channel-icon"
        />
        <MemoizedFormattedMessage
          defaultMessage="Shared with trusted organizations"
          id="admin.channel_settings.channel_detail.channelOrganizationsMessage"
        />
      </div>
      <div
        className="AdminChannelDetails_archiveContainer"
      >
        <button
          className="btn btn-secondary btn-danger"
          type="button"
        >
          <i
            className="icon icon-archive-outline"
          />
          <MemoizedFormattedMessage
            defaultMessage="Archive Channel"
            id="admin.channel_settings.channel_details.archiveChannel"
          />
        </button>
      </div>
    </div>
  </div>
</AdminPanel>
`;
